--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ dmypy.json
 cython_debug/
 
 dataset/base/*
+dataset/*/*
 
 # dataset/base/100_foggy_test_image/*.jpg
 # dataset/base/500_fogfree_image/
